--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -66,7 +66,7 @@
 }
 
 @article{brown2020SummaryAbundance2020,
-  title = {2020 {{Summary}} of {{Abundance Data}} for {{Chinook Salmon}} (\textit{{Oncorhynchus} tshawytscha}) in {{Southern British Columbia}}, {{Canada}}},
+  title = {2020 {{Summary}} of {{Abundance Data}} for {{Chinook Salmon}} ({{{\emph{Oncorhynchus\vphantom\{\} tshawytscha}}}}) in {{Southern British Columbia}}, {{Canada}}},
   author = {Brown, G. S. and Thiess, M. E. and Wor, C. and Holt, C. A. and Patten, B. and Bailey, R. E. and Parken, C. K. and Baillie, S. J. and Candy, J. R. and Willis, D. M. and Hertz, E. and Connors, B. and Pestal, G. P.},
   year = {2020},
   journal = {Canadian Technical Report of Fisheries and Aquatic Sciences},
@@ -130,7 +130,7 @@
 }
 
 @article{cosewicCOSEWICAssessmentStatus2016,
-  title = {{{COSEWIC}} Assessment and Status Report on the {{Coho Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Kisutch}}), {{Interior Fraser}} Population, in {{Canada}}.},
+  title = {{{COSEWIC}} Assessment and Status Report on the {{Coho Salmon}} ({{{\emph{Oncorhynchus kisutch}}}}), {{Interior Fraser}} Population, in {{Canada}}.},
   author = {COSEWIC},
   year = {2016},
   journal = {Committee on the Status of Endangered Wildlife in Canada. Ottawa},
@@ -138,8 +138,8 @@
 }
 
 @techreport{cosewicCOSEWICAssessmentStatus2020,
-  title = {{{COSEWIC}} Assessment and Status Report on the Chinook Salmon, \textit{{Oncorhynchus} tshawytscha}, Designatable Units in {{Southern British Columbia}} (Part Two  Designatable Units with High Levels of Artificial Releases in the Last 12 Years), in {{Canada}}.},
-  author = {{COSEWIC} and {Environment and Climate Change Canada} and {Committee on the Status of Endangered Wildlife in Canada}},
+  title = {{{COSEWIC}} Assessment and Status Report on the Chinook Salmon, {{{\emph{Oncorhynchus tshawytscha}}}}, Designatable Units in {{Southern British Columbia}} (Part Two  Designatable Units with High Levels of Artificial Releases in the Last 12 Years), in {{Canada}}.},
+  author = {{COSEWIC}},
   year = {2020},
   pages = {xxxv + 203 pp},
   institution = {{Environment and Climate Change Canada}},
@@ -149,7 +149,7 @@
 }
 
 @article{coxCandidateLimitReference2019,
-  title = {Candidate {{Limit Reference Points}} as a {{Basis}} for {{Choosing Among Alternative Harvest Control Rules}} for {{Pacific Herring}} (\textit{{Clupea} pallasii}) in {{British Columbia}}},
+  title = {Candidate {{Limit Reference Points}} as a {{Basis}} for {{Choosing Among Alternative Harvest Control Rules}} for {{Pacific Herring}} ({{{\emph{Clupea pallasii}}}}) in {{British Columbia}}},
   author = {Cox, Sean P and Benson, Ashleen J and Cleary, Jaclyn S and Taylor, Nathan G},
   year = {2019},
   journal = {Canadian Science Advisory Secretariat Research Document},
@@ -191,7 +191,7 @@
 }
 
 @article{deckerAssessmentInteriorFraser2014,
-  title = {Assessment of the {{Interior Fraser Coho Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Kisutch}}) {{Management Unit Relative}} to the 2006 {{Conservation Strategy Recovery Objectives}}},
+  title = {Assessment of the {{Interior Fraser Coho Salmon}} ({{{\emph{Oncorhynchus kisutch}}}}) {{Management Unit Relative}} to the 2006 {{Conservation Strategy Recovery Objectives}}},
   author = {Decker, A Scott and Hawkshaw, Michael A and Patten, Bruce A and Sawada, Joel and Jantz, A Lester},
   year = {2014},
   journal = {Canadian Science Advisory Secretariat Research Document},
@@ -202,7 +202,7 @@
 
 @techreport{dfo2017FraserSockeye2018,
   type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Sci}}. {{Advis}}. {{Rep}}},
-  title = {The 2017 {{Fraser Sockeye Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Nerka}}) Integrated Biological Status Re-Assessment under the {{Wild Salmon Policy}}},
+  title = {The 2017 {{Fraser Sockeye Salmon}} ({{{\emph{Oncorhynchus nerka}}}}) Integrated Biological Status Re-Assessment under the {{Wild Salmon Policy}}},
   author = {{DFO}},
   year = {2018},
   number = {2018/017},
@@ -252,7 +252,7 @@
 }
 
 @article{dfoIntegratedBiologicalStatus2016,
-  title = {Integrated {{Biological Status}} of {{Southern British Columbia Chinook Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Tshawytscha}}) under the {{Wild Salmon Policy}}},
+  title = {Integrated {{Biological Status}} of {{Southern British Columbia Chinook Salmon}} ({{{\emph{Oncorhynchus tshawytscha}}}}) under the {{Wild Salmon Policy}}},
   author = {{DFO}},
   year = {2016},
   journal = {DFO Canadian Science Advisory Secretariat Science Advisory Report},
@@ -311,7 +311,7 @@
 }
 
 @article{dfoWildSalmonPolicy2015,
-  title = {Wild Salmon Policy Biological Status Assessment for Conservation Units of Interior {{Fraser River Coho Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Kisutch}})},
+  title = {Wild Salmon Policy Biological Status Assessment for Conservation Units of Interior {{Fraser River Coho Salmon}} ({{{\emph{Oncorhynchus kisutch}}}})},
   author = {DFO},
   year = {2015},
   journal = {DFO Canadian Science Advisory Secretariat Science Advisory Report},
@@ -383,7 +383,7 @@
 }
 
 @article{forrestAssessmentPacificCod2020,
-  title = {Assessment of {{Pacific Cod}} ({{Gadus}} Macrocephalus) for {{Hecate Strait}} and {{Queen Charlotte Sound}} ({{Area 5ABCD}}), and {{West Coast Vancouver Island}} ({{Area 3CD}}) in 2018},
+  title = {Assessment of {{Pacific Cod}} ({{{\emph{Gadus macrocephalus}}}}) for {{Hecate Strait}} and {{Queen Charlotte Sound}} ({{Area 5ABCD}}), and {{West Coast Vancouver Island}} ({{Area 3CD}}) in 2018},
   author = {Forrest, R E and Anderson, S C and Gr, in and C.J. and Starr, P J},
   year = {2020},
   journal = {Canadian Science Advisory Secretariat Research Document},
@@ -427,7 +427,7 @@
 }
 
 @techreport{godboutStockStatusWild2004,
-  title = {Stock {{Status}} of {{Wild Chum Salmon}} (\textit{{Oncorhynchus} keta} {Walbaum}) {{Returning}} to {{British Columbia}}'s {{Central Coast}} and {{Johnstone}} and {{Georgia Straits}} (Excluding the {{Fraser River}})},
+  title = {Stock {{Status}} of {{Wild Chum Salmon}} ({{{\emph{Oncorhynchus keta}}}} {{Walbaum}}) {{Returning}} to {{British Columbia}}'s {{Central Coast}} and {{Johnstone}} and {{Georgia Straits}} (Excluding the {{Fraser River}})},
   author = {Godbout, L and Irvine, J. R. and Bailey, D. and Van Will, P. and McConnell, C.},
   year = {2004},
   number = {2004/007},
@@ -437,7 +437,7 @@
 }
 
 @article{grant2017FraserSockeye2020,
-  title = {The 2017 {{Fraser Sockeye Salmon}} (\textit{{Oncorhynchus} nerka}) {{Integrated Biological Status Re-Assessments Under}} the {{Wild Salmon Policy Using Standardized Metrics}} and {{Expert Judgment}}},
+  title = {The 2017 {{Fraser Sockeye Salmon}} ({{{\emph{Oncorhynchus\vphantom\{\} nerka}}}}) {{Integrated Biological Status Re-Assessments Under}} the {{Wild Salmon Policy Using Standardized Metrics}} and {{Expert Judgment}}},
   author = {Grant, S C H and Holt, C A and Pestal, G and Davis, B M and MacDonald, B L},
   year = {2020},
   pages = {218},
@@ -446,7 +446,7 @@
 }
 
 @techreport{hilbornBritishColumbiaChum2012,
-  title = {British {{Columbia Chum Salmon}} (\textit{{Oncorhynchus} keta}) {{Fisheries}}: {{British Columbia Coastal}} and {{Adjacent Canadian Pacific EEZ Waters}}, {{Final Certification Report}}.},
+  title = {British {{Columbia Chum Salmon}} ({{{\emph{Oncorhynchus keta}}}}) {{Fisheries}}: {{British Columbia Coastal}} and {{Adjacent Canadian Pacific EEZ Waters}}, {{Final Certification Report}}.},
   author = {Hilborn, Ray and Schmidt, Dana and English, Karl and Devitt, Steve},
   year = {2012},
   number = {82506},
@@ -516,7 +516,7 @@
 }
 
 @techreport{ifcrtConservationStrategyCoho2006,
-  title = {Conservation Strategy for {{Coho Salmon}}  (\textit{{Oncorhynchus} kisutch}), Interior {{Fraser River}} Populations},
+  title = {Conservation Strategy for {{Coho Salmon}}  ({{{\emph{Oncorhynchus kisutch}}}}), Interior {{Fraser River}} Populations},
   author = {{IFCRT}},
   year = {2006},
   pages = {132},
@@ -610,7 +610,7 @@
 }
 
 @article{liermannUsingAccessibleWatershed2010,
-  title = {Using Accessible Watershed Size to Predict Management Parameters for {{Chinook}} Salmon, ({{{\emph{Oncorhynchus}}}} Tshawytscha), Populations with Little or No Spawner-Recruit Data: A {{Bayesian}} Hierarchical Modelling Approach},
+  title = {Using Accessible Watershed Size to Predict Management Parameters for {{Chinook}} Salmon, {{{\emph{Oncorhynchus tshawytscha}}}}, Populations with Little or No Spawner-Recruit Data: A {{Bayesian}} Hierarchical Modelling Approach},
   author = {Liermann, M. C. and Sharma, R. and Parken, C. K.},
   year = {2010},
   journal = {Fisheries Management and Ecology},
@@ -655,7 +655,7 @@
 }
 
 @article{mckechnieArchaeologicalDataProvide2014,
-  title = {Archaeological Data Provide Alternative Hypotheses on {{Pacific}} Herring ( {{{\emph{Clupea}}}}{\emph{ Pallasii}} ) Distribution, Abundance, and Variability},
+  title = {Archaeological Data Provide Alternative Hypotheses on {{Pacific}} Herring ( {{{\emph{Clupea pallasii}}}} ) Distribution, Abundance, and Variability},
   author = {McKechnie, Iain and Lepofsky, Dana and Moss, Madonna L. and Butler, Virginia L. and Orchard, Trevor J. and Coupland, Gary and Foster, Fredrick and Caldwell, Megan and Lertzman, Ken},
   year = {2014},
   month = mar,
