--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -237,7 +237,7 @@ The frequency of SMU-scale peer reviews outside of the annual implementation of 
 
 ### Step 7: Are Aggregate Abundance LRPs Required For Fisheries Management? 
 
-Although CU status-based LRPs may meet requirements under the Fish Stocks provisions for Pacific salmon, abundance-based LRPs may be needed for fisheries management decisions (Section \@ref(roleLRPs)).  For SMUs where harvest at the aggregate scale is a dominant driver of population dynamics and restricting fisheries harvest is a principle management lever, an LRP along the metric of SMU-level abundances may support precautionary management. For example, when LRPs are used to inform a harvest control rule, fishing pressure can be gradually curtailed as aggregate abundances decline towards the LRP to avoid depletion below that level. Aggregate abundance-based benchmarks may in some cases be required for local or international management. For example, aggregate escapement goals are required for Nass and Skeena Sockeye under Pacific Salmon Treaty provisions (2019)<!--@TreatyGovernmentCanada2019 . Have to figure out how to reference this without having the full name of the treaty here-->, although to comply with WSP objectives, the aggregate escapement goal must consider CU-level diversity. 
+Although CU status-based LRPs may meet requirements under the Fish Stocks provisions for Pacific salmon, abundance-based LRPs may be needed for fisheries management decisions (Section \@ref(roleLRPs)).  For SMUs where harvest at the aggregate scale is a dominant driver of population dynamics and restricting fisheries harvest is a principal management lever, an LRP along the metric of SMU-level abundances may support precautionary management. For example, when LRPs are used to inform a harvest control rule, fishing pressure can be gradually curtailed as aggregate abundances decline towards the LRP to avoid depletion below that level. Aggregate abundance-based benchmarks may in some cases be required for local or international management. For example, aggregate escapement goals are required for Nass and Skeena Sockeye under Pacific Salmon Treaty provisions (2019)<!--@TreatyGovernmentCanada2019 . Have to figure out how to reference this without having the full name of the treaty here-->, although to comply with WSP objectives, the aggregate escapement goal must consider CU-level diversity. 
 
 However, when LRPs are defined within the context of a Management Procedure framework (Section \@ref(roleLRPs)), then an aggregate abundance LRP may not be required if the framework can demonstrate the probability of individual CUs having status above Red for various management options. For Pacific salmon, management procedures may extend beyond harvest control rules to include time-area closures, gear restrictions, habitat enhancement or hatchery supplementation to protect individual CUs. Therefore, the choice to develop an aggregate abundance LRP depends on the decision context, and should be made in collaboration with various sectors and First Nations responsible for management decisions that affect the SMU. If aggregate abundance LRPs are not required, assessment of the SMU would be provided from steps 1-6. The following steps (8-9) are relevant if aggregate abundance LRPs are required, and build on CU status-based LRPs derived in the previous steps. Uncertainties introduced by the inclusion of models to relate aggregate abundances to CU-level statuses should be considered when choosing LRP methods (Principle 5 in Section \@ref(principles)). 
 
