--- a/caseStudyWP/index.Rmd
+++ b/caseStudyWP/index.Rmd
@@ -110,27 +110,80 @@ opts_chunk$set(
   fig.align = fig_align,
   fig.pos = fig_pos
 )
-options(xtable.comment = FALSE)
-options(kableExtra.latex.load_packages = FALSE)
+options(# Prevent xtable from adding a timestamp comment to the table code it produces
+        xtable.comment = FALSE,
+        # Don't allow kableExtra to load packages, we add them manually in csasdown
+        kableExtra.latex.load_packages = FALSE,
+        # Stop chunk output (echo) running into the margins
+        width = 80,
+        # Don't use scientific notation (stops tables from showing 1.2e3, etc.)
+        scipen = 999)
 ```
 
 ```{r load-libraries, cache=FALSE}
-# `french` and `prepub` variables are extracted from the YAML headers above and
-#  are used throughout the document. To make the document all in french, change
-#  the line in the YAML header above to `french: true`
 meta <- rmarkdown::metadata$output
-if(length(grep("pdf", names(meta)))){
-  french <- meta$`csasdown::resdoc_pdf`$french
-  prepub <- meta$`csasdown::resdoc_pdf`$prepub
-}else if(length(grep("word", names(meta)))){
-  french <- meta$`csasdown::resdoc_word`$french
-  prepub <- meta$`csasdown::resdoc_word`$prepub
+if (is.null(meta)) {
+  # This knitr chunk has been run in R without running bookdown::render_book("index.Rmd")
+  # so rmarkdown::metadata$output is not populated
+  options(french = FALSE)
+} else {
+  if (length(grep("pdf", names(meta)))) {
+    options(french = meta$`csasdown::resdoc_pdf`$french)
+    prepub <- meta$`csasdown::resdoc_pdf`$prepub
+  } else if (length(grep("word", names(meta)))) {
+    options(french = meta$`csasdown::resdoc_word`$french)
+    prepub <- meta$`csasdown::resdoc_word`$prepub
+  }
 }
 csl <- "csl/csas.csl"
-if(french){
-  csl <- "csl/csas-french.csl"
-  options(OutDec =  ",")
+if (is.null(getOption("french"))) {
+  stop("`french` was not set up correctly in YAML header in index.Rmd. ",
+       "It must be true or false",
+       call. = FALSE)
 }
+if (getOption("french")) {
+  csl <- "csl/csas-french.csl"
+  options(OutDec = ",")
+}
+
+# This hook simplifies document translation for the author.
+# When building in French, it draws a box around paragraphs contained in chunks
+#  which have the option `needs_trans = TRUE`. It also labels
+#  the box with a 'Needs translation' tag in red and the chunk label in blue.
+# You need to change the `needs_trans` option to `FALSE` for a chunk once you
+#  have inserted the translated text into it. You will get a utf-8 error if
+#  you leave it as `TRUE` and there is French in the chunk.
+#  This function assumes you are translating from English to French.
+#  If you wrote your document in French and want to translate to English,
+#  put a ! before `getOption("french")` below and add the `need_trans`
+#  chunk options to your English paragraph chunks instead of the French ones.
+#  
+#  IMPORTANT NOTES
+#  - You must use double backslashes in all paragraph chunks, so anywhere you
+#    would normally use a single backslash, use two backslashes.
+#    Examples are \@ref() which needs to be \\@ref() and \pi which must now be \\pi.
+#  - French latex places a space before the colon by default so if you need a colon
+#    with no space before it, use \\hc .
+knit_hooks$set(needs_trans = function(before, options){
+  if(getOption("french") && options$needs_trans){
+    if (before){
+      paste0("\\
+       \\begin{lrbox}{\\userinput}
+       \\begin{minipage}{\\dimexpr\\linewidth-2\\fboxsep-2\\fboxrule}
+       \\textcolor{red}{\\textbf{Needs translation - \\textcolor{blue}{knitr chunk: ", options$label, "}}}
+       \\begin{lstlisting}
+      ")
+    } else {
+      "
+       \\end{lstlisting}
+       \\end{minipage}
+       \\end{lrbox}
+       \\noindent
+       \\fbox{\\usebox{\\userinput}}
+      "
+    }
+  }
+})
 
 # add other packages here:
 library(dplyr)
