--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -496,7 +496,7 @@
   number = {82506},
   pages = {458},
   institution = {{Submitted to Canadian Pacific Sustainable Fisheries Society}},
-  url = {https://www.psf.ca/sites/default/files/20121203_FR_CHUM_SAL318.pdf},
+  url = {https://cert.msc.org/FileLoader/FileLinkDownload.asmx/GetFile?encryptedKey=7Vmoh6f1XiltbBchK3vet6pENUB2cMgo+ky2lejoZhIzbwoyLfHKcNk6G3H7Npiw},
   langid = {english},
   file = {C\:\\Users\\WarkentinL\\Zotero\\storage\\KZ9QIW9G\\Hilborn et al. - 2012 - British Columbia Chum Salmon (Oncorhynchus keta.pdf}
 }
@@ -506,10 +506,11 @@
   author = {Holtby, L. Blair and Ciruna, Kristine A.},
   date = {2007},
   journaltitle = {DFO Canadian Science Advisory Secretariat Research Document},
+  shortjournal = {DFO Can. Sci. Advis. Sec. Res. Doc.},
   series = {Canadian {{Science Advisory Secretariat}}},
   volume = {2007/070},
-  pages = {358},
-  url = {https://waves-vagues.dfo-mpo.gc.ca/Library/334860.pdf},
+  pages = {viii + 350 p.},
+  url = {https://www.dfo-mpo.gc.ca/csas-sccs/publications/resdocs-docrech/2007/2007_070-eng.htm},
   file = {C\:\\Users\\WarkentinL\\Zotero\\storage\\A26ES6NW\\Holtby and Ciruna - 2007 - Conservation Units for Pacific Salmon under the Wi.pdf}
 }
 
@@ -534,8 +535,10 @@
   author = {Holt, Carrie and Davis, Brooke and Dobson, Diana and Godbout, Lyse and Luedke, Wilf and Tadey, Joe and Van Will, P},
   date = {2018},
   journaltitle = {DFO Canadian Science Advisory Secretariat Research Document},
+  shortjournal = {DFO Can. Sci. Advis. Sec. Res. Doc.},
   volume = {2018/011},
-  pages = {ix + 77},
+  pages = {ix + 87 p.},
+  url = {https://publications.gc.ca/site/fra/9.874854/publication.html},
   abstract = {Status assessments for Chum Salmon (Oncorhynchus keta) under the Wild Salmon Policy (WSP) have been limited, in part because recruitment time-series required to calculate stock- recruitment based benchmarks are not consistently available. Alternative benchmarks have been proposed for data-limited Conservation Units (CUs) using percentiles of the observed spawner abundance time-series. However, these benchmarks have not been evaluated against stock-recruitment benchmarks currently used to assess status on abundances for data-rich CUs. Our goals were to evaluate percentile-based benchmarks against stock-recruitment based benchmarks accounting for high uncertainties and possible biases in spawner abundances, catches, recruitment estimates, and age-at-maturity. We used two approaches to evaluate benchmarks based on a retrospective comparison through the historical record and a prospective simulation model under numerous hypothetical future scenarios. We demonstrate an approach for providing assessments that accounts for uncertainties in benchmarks, and provide advice on the applicability of percentile-based benchmarks for data-limited CUs of Chum Salmon relative to stock-recruitment benchmarks used for data-rich CUs. In general, our results support the application of percentile-based benchmarks for data-limited CUs of Chum Salmon when productivity is moderate to high ({$>$}2.5 recruits/spawner) and harvest rates are low to moderate (≤40\%). However, we suggest further evaluation of percentile benchmarks (and the consideration of alternatives) when productivity is expected to be low and/or harvest rates high. Under these conditions, concurrent declines in abundances and percentile benchmarks can results in status assessments that are more optimistic than those from stock-recruitment benchmarks due to shifting baselines.},
   langid = {english}
 }
@@ -545,8 +548,10 @@
   author = {Holt, Carrie A and Cass, Alan and Holtby, Blair and Riddell, Brian},
   date = {2009},
   journaltitle = {Canadian Science Advisory Secretariat Science Research Document},
+  shortjournal = {DFO Can. Sci. Advis. Res. Doc.},
   volume = {2009/058},
-  pages = {82},
+  pages = {viii + 74 p},
+  url = {https://www.dfo-mpo.gc.ca/csas-sccs/Publications/ResDocs-DocRech/2009/2009_058-eng.htm},
   abstract = {The goal of Canada's Wild Salmon Policy (WSP) is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity. To achieve that goal, the WSP requires that biological status be assessed for all geographically, ecologically, and genetically distinct populations, or Conservation Units (CUs). One component of that assessment is identifying quantifiable metrics of biological status and benchmarks along those metrics. Here, we provide a toolkit of metrics and benchmarks of status, which will set the stage for future CU assessments. Specifically, we propose a multi-criteria approach for assessing status that uses information on current abundances, trends in abundance over time, distribution of spawners, and fishing mortality relative to stock productivity. That approach captures the multiple dimensions of population status that will be important to achieve WSP goals better than assessments based on abundances alone. Furthermore, any redundancy in information content among criteria may allow for increased flexibility when assessing stocks that differ widely in data quantity and quality. Here, we identify quantifiable metrics and candidate benchmarks drawn from the scientific literature and previous management experience. Using a simulation model, we further evaluate a subset of those benchmarks on two performance metrics: the probability of extirpation over the long term and the probability of recovery to a target. Finally, we apply those metrics and candidate benchmarks to two example CUs, Takla/Trembleur sockeye salmon (Early Stuart run-timing group of the Fraser River) and Hecate Strait Lowlands pink salmon (odd year).},
   langid = {english},
   file = {C\:\\Users\\WarkentinL\\Zotero\\storage\\MHF9YRE8\\Holt et al. - 2009 - Indicators of Status and Benchmarks for Conservati.pdf}
@@ -554,11 +559,12 @@
 
 @article{holtQuantitativeToolEvaluating2020,
   title = {A Quantitative Tool for Evaluating Rebuilding Plans for {{Pacific}} Salmon},
-  author = {Holt, C. A and Freshwater, C. and Holt, K.R. and Huang, A.M.},
+  author = {Holt, C. A and Freshwater, C. and Holt, K.R. and Huang, A.-M.},
   date = {2020},
   journaltitle = {Canadian Technical Report of Fisheries and Aquatic Sciences},
+  shortjournal = {Can. Tech. Rep. Fish. Aquat. Sci.},
   volume = {3402},
-  pages = {v + 26p.},
+  pages = {v + 26 p.},
   url = {http://publications.gc.ca/collections/collection_2020/mpo-dfo/Fs97-6-3402-eng.pdf},
   urldate = {2021-10-23},
   abstract = {"Rebuilding plans are required for depleted stocks under the Fish Stock Provisions of Canada's revised Fisheries Act (2019) and DFO's Sustainable Fisheries Framework (2009). The overall goal of this project was to create a tool for developing and evaluating the harvest component of rebuilding plans for Pacific salmon, which evaluates trade-offs between conservation objectives and other fisheries management objectives"--Abstract.},
@@ -566,12 +572,12 @@
   annotation = {OCLC: 1199014307}
 }
 
-@report{ifcrtConservationStrategyCoho2006,
+@article{ifcrtConservationStrategyCoho2006,
   title = {Conservation Strategy for {{Coho Salmon}}  ({{{\emph{Oncorhynchus kisutch}}}}), Interior {{Fraser River}} Populations},
   author = {{IFCRT}},
   date = {2006},
-  pages = {132},
-  institution = {{Interior Fraser Coho Recovery Team, Fisheries and Oceans Canada}}
+  journaltitle = {Fisheries and Oceans Canada},
+  url = {http://essa.com/wp-content/uploads/2015/03/InteriorFraserCohoConservationStrategy-TOC-and-ExecSumm.pdf}
 }
 
 @report{iucnstandardsandpetitionscommitteeGuidelinesUsingIUCN2019,
@@ -610,14 +616,14 @@
   journaltitle = {Canadian Science Advisory Secretariat Research Document},
   shortjournal = {DFO Can. Sci. Advis. Res. Doc.},
   volume = {2019/001},
-  pages = {vii + 88p},
-  url = {https://waves-vagues.dfo-mpo.gc.ca/Library/40780223.pdf},
+  pages = {vii + 81 p.},
+  url = {https://www.dfo-mpo.gc.ca/csas-sccs/Publications/ResDocs-DocRech/2019/2019_001-eng.html},
   langid = {english},
   file = {C\:\\Users\\WarkentinL\\Zotero\\storage\\JAD2WC9S\\Korman et al. - Evaluation framework for assessing potential Pacif.pdf}
 }
 
 @article{kristensenTMBAutomaticDifferentiation2016,
-  title = {{{{\textbf{TMB}}}} : {{Automatic Differentiation}} and {{Laplace Approximation}}},
+  title = {{{TMB}}: {{Automatic Differentiation}} and {{Laplace Approximation}}},
   shorttitle = {{{{\textbf{TMB}}}}},
   author = {Kristensen, Kasper and Nielsen, Anders and Berg, Casper W. and Skaug, Hans and Bell, Bradley M.},
   date = {2016},
@@ -625,6 +631,7 @@
   shortjournal = {J. Stat. Soft.},
   volume = {70},
   number = {5},
+  pages = {1--21},
   issn = {1548-7660},
   doi = {10.18637/jss.v070.i05},
   url = {http://www.jstatsoft.org/v70/i05/},
@@ -708,7 +715,8 @@
   author = {Lynch, Cheryl and Bateman, Joan and Ramshaw, Brock and Bell, Jessica},
   date = {2020},
   journaltitle = {Can. Data Rep. Fish. Aquat. Sci.},
-  pages = {ix + 535},
+  volume = {1319},
+  pages = {ix + 535 p.},
   url = {https://publications.gc.ca/site/eng/9.893287/publication.html}
 }
 
@@ -868,8 +876,9 @@
   author = {Parken, Charles K. and McNicol, Richard E. and Irvine, James R.},
   date = {2006},
   journaltitle = {DFO Canadian Science Advisory Secretariat Research Document},
+  shortjournal = {DFO Can. Sci. Advis. Res. Doc.},
   volume = {2006/83},
-  pages = {vii + 67},
+  pages = {vii + 67 p.},
   url = {http://www.dfo-mpo.gc.ca/csas-sccs/publications/resdocs-docrech/2006/2006_083-eng.htm},
   abstract = {Fisheries and Oceans Canada requires escapement goals for Chinook salmon (Oncorhynchus tshawytscha) stocks to evaluate their status and achieve objectives established by international agreements and domestic policy. Unfortunately the data typically needed to establish these ‘goals’, using stock-recruitment techniques, are expensive to gather and are, for most stocks, lacking. This prompted us to develop the habitat-based approach to generate escapement goals described in this report. We related productive capacity to freshwater habitat area based on results from a meta-analysis of 25 Chinook stocks. Stocks were distributed between central Alaska and northern Oregon and represented a broad range of environments and life history. We developed an allometric model that predicted Smsy and Srep (spawners required to produced maximum sustained yield and replacement, respectively) from the watershed area and assessed the model’s performance. The model adequately predicted the Smsy and Srep for an independent data source and out-performed a current interim method applied to British Columbia (BC) Key Streams. The habitat-based approach adequately predicted Smsy and Srep for seven case study examples, although it overestimated the productive capacity of stocks with relatively small spawning areas. Our habitat-based model can generate biologically-based escapement goals, rooted in fish-production relationships, for data limited stocks over a broad range of environments. This simple approach requires easily acquirable data and makes few assumptions. However, spawner escapements of known accuracy and reliability are required, which may impede implementation for some systems. The approach is well-suited for most data limited stocks in BC and can be tested and refined as new stock-recruitment data become available. Since the habitat-based method was more accurate than the interim method for BC Key Streams, we recommend applying it for data limited stocks in BC to establish escapement goals until more stock-specific data are available.}
 }
@@ -895,8 +904,10 @@
   title = {Evaluating the Consequences of Common Assumptions in Run Reconstructions on {{Pacific}} Salmon Biological Status Assessments},
   author = {Peacock, Stephanie J and Hertz, Eric and Holt, Carrie A and Connors, Brendan and Freshwater, Cameron and Connors, Katrina},
   date = {2020},
+  shortjournal = {Can. J. Fish. Aquat. Sci.},
   volume = {77},
-  pages = {17},
+  pages = {1904--1920},
+  doi = {http://dx.doi.org/10.1139/cjfas-2019-0432},
   abstract = {Information on biological status is essential for designing, implementing, and evaluating management strategies and recovery plans for threatened or exploited species. However, the data required to quantify status are often limited, and it is important to understand how assessments of status may be biased by assumptions in data analysis. For Pacific salmon, biological status assessments based on spawner abundances and spawner–recruitment (SR) analyses often involve “run reconstructions” that impute missing spawner data, expand observed spawner abundance to account for unmonitored streams, assign catch to individual stocks, and quantify age-at-return. Using a stochastic simulation approach, we quantified how common assumptions in run reconstructions biased assessments of biological status based on spawner abundance. We found that status assessments were robust to most common assumptions in run reconstructions, even in the face of declining monitoring coverage, but that overestimating catch tended to increase rates of status misclassification. Our results lend confidence to biological status assessments based on spawner abundances and SR analyses, even in the face of incomplete data.},
   langid = {english},
   file = {C\:\\Users\\WarkentinL\\Zotero\\storage\\E5HWYSQ8\\Peacock et al. - 2020 - Evaluating the consequences of common assumptions .pdf}
@@ -1023,13 +1034,13 @@
 }
 
 @article{riddellReview2001Chinook2002,
-  title = {Review of 2001 {{Chinook Returns}} to the {{West Coast Vancouver Island}}, {{Forecast}} of the 2002 {{Return}} to the {{Stamp River}} / {{Robertson Creek Hatchery Indicator Stock}}, and {{Outlook}} for Other {{WCVI Chinook Stocks}}},
+  title = {Review of 2001 Chinook Returns to the {{West Coast Vancouver Island}}, Forecast of the 2002 {{Return}} to the {{Stamp River}} / {{Robertson Creek Hatchery}} Indicator Stock, and Outlook for Other {{WCVI}} Chinook Stocks},
   author = {Riddell, B E and Luedke, W and Till, J and Taylor, S and Tompkins, A},
   date = {2002},
   journaltitle = {Can. Sci. Advis. Sec. Res. Doc.},
-  volume = {2006/083},
-  pages = {44},
-  url = {https://waves-vagues.dfo-mpo.gc.ca/Library/271121.pdf},
+  volume = {2002/119},
+  pages = {43 p.},
+  url = {https://www.dfo-mpo.gc.ca/csas-sccs/publications/resdocs-docrech/2002/2002_119-eng.htm},
   langid = {english},
   file = {C\:\\Users\\WarkentinL\\Zotero\\storage\\Q7BBYJ7N\\Riddell et al. - Review of 2001 Chinook Returns to the West Coast V.pdf}
 }
@@ -1068,9 +1079,11 @@
 }
 
 @software{standevelopmentteamRStanInterfaceStan2020,
-  title = {{{RStan}}: The {{R}} Interface to {{Stan}}. {{R}} Package Version 2.21.2. {{http://mc-stan.org/.}}},
+  title = {{{RStan}}: The {{R}} Interface to {{Stan}}},
   author = {Stan Development Team,},
-  date = {2020}
+  date = {2020},
+  url = {http://mc-stan.org/},
+  version = {R package version 2.21.2}
 }
 
 @report{vanwillInnerSouthCoast2014,
@@ -1087,8 +1100,9 @@
   author = {Withler, R.E. and Bradford, M.J. and Willis, D.M. and Holt, C.A.},
   date = {2018},
   journaltitle = {DFO Canadian Science Advisory Secretariat Research Document},
-  volume = {2015/050},
-  pages = {88},
+  shortjournal = {DFO Can. Sci.  Advis. Sec. Res. Doc.},
+  volume = {2018/019},
+  pages = {xii + 88 p.},
   url = {https://waves-vagues.dfo-mpo.gc.ca/Library/40702285.pdf}
 }
 
