--- a/guidelinesWP/03-chap3.Rmd
+++ b/guidelinesWP/03-chap3.Rmd
@@ -208,7 +208,7 @@ CU status-based LRPs are calculated from the proportion of CUs within an SMU tha
 &nbsp;
 *Alignment with LRP Principles*
 
-CU status-based LRPs can be based on the best available information (Principle 1) by incorporating multiple dimensions of status through formal, peer-reviewed WSP status assessments or the use of the Salmon Scanner with peer review. By using status derived from the annual implementation of the Salmon Scanner, relevant and timely information is used to inform status in a way that is transparent and open. CU status-based LRPs represent serious harm (Principle 2) as indicated by the status of any one component CU within the SMU being in the Red zone under the WSP, given that the deterioration of stock structure can itself be a form of serious harm. CU status-based LRPs are operational (Principle 3) because they are simple to calculate and communicate as a proportion of CU statuses. For SMUs where harvest is managed at the aggregate SMU scale, however, CU status-based LRPs are not easily incorporated into harvest control rules at that scale. Reliability of estimation (Principle 4) depends in part on the underlying data and is CU- and SMU-dependent. Uncertainties are not currently propagated from CU-level benchmarks and statuses from the Salmon Scanner, to LRPs and SMU statuses (Principle 5).  CU status-based LRPs are well aligned with Principle 6, being derived directly from WSP metrics of status for CUs.
+CU status-based LRPs can be based on the best available information (Principle 1) by incorporating multiple dimensions of status through formal, peer-reviewed WSP status assessments or the use of the Salmon Scanner with peer review. By using status derived from the annual implementation of the Salmon Scanner, relevant and timely information is used to inform status in a way that is transparent and open. CU status-based LRPs represent serious harm (Principle 2) as indicated by the status of any one component CU within the SMU being in the Red zone under the WSP, given that the deterioration of stock structure (i.e., loss of diversity) can itself be a form of serious harm. CU status-based LRPs are operational (Principle 3) because they are simple to calculate and communicate as a proportion of CU statuses. For SMUs where harvest is managed at the aggregate SMU scale, however, CU status-based LRPs are not easily incorporated into harvest control rules at that scale. Reliability of estimation (Principle 4) depends in part on the underlying data and is CU- and SMU-dependent. Uncertainties are not currently propagated from CU-level benchmarks and statuses from the Salmon Scanner, to LRPs and SMU statuses (Principle 5).  CU status-based LRPs are well aligned with Principle 6, being derived directly from WSP metrics of status for CUs.
 
 A further advantage of this method is that it can easily be extended to other spatial scales under which Pacific salmon are managed. For example, CUs can be assessed individually when threats and responses are localized to specific watersheds, e.g., Cultus Sockeye which has unique threats to its spawning and rearing habitats. CU status can also be aggregated at various scales and across species when threats and responses are broader, e.g, for the management of numerous salmon species and CUs impacted by the Big Bar landslide reported in 2019.  
 
